fixed spacing

--- a/frontend/src/app/components/module7/BikeInjuries.module.css
+++ b/frontend/src/app/components/module7/BikeInjuries.module.css
@@ -13,7 +13,7 @@
   font-weight: 400;
   line-height: 150%; /* 48px */
   letter-spacing: 0.64px;
-  margin-bottom: 40px;
+  margin-bottom: 50px;
   text-align: center;
   width: 100%;
   max-width: 1000px;
@@ -28,7 +28,7 @@
 .textSection {
   display: flex;
   flex-direction: column;
-  gap: 50px;
+  gap: 20px;
   color: #000;
   /* Body/Large (Reg) */
   font-family: "DM Sans";
@@ -41,14 +41,14 @@
 .point {
   display: flex;
   width: 1004px;
-  padding: 10px 50px;
+  padding: 32px;
   align-items: center;
-  gap: 45px;
+  gap: 32px;
 }
 
 .point1 {
   border-radius: 8px;
-  background: rgba(185, 59, 59, 0.2);
+  background: #ffe5e5;
 }
 
 .point2 {
@@ -58,12 +58,12 @@
 
 .point3 {
   border-radius: 8px;
-  background: #f88;
+  background: #ff9797;
 }
 
 .point4 {
   border-radius: 8px;
-  background: #fa6464;
+  background: #ff7676;
 }
 
 .number {
