--- a/frontend/src/app/components/module7/RoleModels.module.css
+++ b/frontend/src/app/components/module7/RoleModels.module.css
@@ -69,14 +69,14 @@
 
 /* Positions are now relative to the scaled background */
 .parent {
-  top: 25%;
+  top: 22%;
   left: 8%;
   z-index: 2;
   transition: transform 0.5s ease-in-out;
 }
 
 .son {
-  top: 39%;
+  top: 36%;
   left: 2%;
   opacity: 0;
   z-index: 3;
@@ -87,7 +87,7 @@
 
 .button {
   top: 30%;
-  left: 70%;
+  left: 72%;
   opacity: 1;
   z-index: 4;
   transition: opacity 0.1s ease;
@@ -102,7 +102,7 @@
 .sonVisible {
   transform: translateX(50px);
   opacity: 1;
-  transition-delay: 0.5s;
+  transition-delay: 0.33s;
 }
 
 .buttonVisible {
